force-app/main/default/objects/CallExport2__c/CallExport2__c.object-meta.xml
<CustomObject>
    <description>Used by VN to retrieve all calls that is to be executed externally</description>
    <label>Call Export</label>
    <nameField>
        <displayFormat>CE2-{00000000}</displayFormat>
        <label>Call Export</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Exports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>