force-app/main/default/objects/CallExport2__c/fields/Brand_To_Be_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Brand_To_Be_Discussed__c</fullName>
    <label>Brand To Be Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>