force-app/main/default/objects/CallExport2__c/fields/Call_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Category__c</fullName>
    <label>Call Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>