force-app/main/default/objects/CallExport2__c/fields/Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_ID__c</fullName>
    <label>Call ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>