force-app/main/default/objects/CallExport2__c/fields/Call_Note__c.field-meta.xml
<CustomField>
    <fullName>Call_Note__c</fullName>
    <label>Call Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>