force-app/main/default/objects/CallExport2__c/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>