force-app/main/default/objects/CallExport2__c/fields/Call_Rgrd_Contact_BR_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Rgrd_Contact_BR_Brand_ID__c</fullName>
    <label>Call Rgrd Contact BR Brand ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>