force-app/main/default/objects/CallExport2__c/fields/Call_Rgrd_Contact_BR_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Rgrd_Contact_BR_Brand_Name__c</fullName>
    <label>Call Rgrd Contact BR Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>