force-app/main/default/objects/CallExport2__c/fields/Call_Rgrd_Contact_BR_SFID__c.field-meta.xml
<CustomField>
    <fullName>Call_Rgrd_Contact_BR_SFID__c</fullName>
    <label>Call Rgrd Contact BR SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>