force-app/main/default/objects/CallExport2__c/fields/Call_Rgrd_Contact_Brand_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Rgrd_Contact_Brand_Switch_Reason__c</fullName>
    <label>Call Rgrd Contact Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>