force-app/main/default/objects/CallExport2__c/fields/Call_Rgrd_Contact_DOB__c.field-meta.xml
<CustomField>
    <fullName>Call_Rgrd_Contact_DOB__c</fullName>
    <label>Call Rgrd Contact DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>