force-app/main/default/objects/CallExport2__c/fields/Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Status__c</fullName>
    <label>Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>