force-app/main/default/objects/CallExport2__c/fields/Call_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Call_Sub_Category__c</fullName>
    <label>Call Sub-Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>