force-app/main/default/objects/CallExport2__c/fields/Campaign_name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_name__c</fullName>
    <label>Campaign name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>