force-app/main/default/objects/CallExport2__c/fields/ChildBrandRelationship__c.field-meta.xml
<CustomField>
    <fullName>ChildBrandRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Brand Relationship</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Call Exports (Call Brand Relationship)</relationshipLabel>
    <relationshipName>Call_Exports3</relationshipName>
    <type>Lookup</type>
</CustomField>