force-app/main/default/objects/CallExport2__c/fields/Converted_BR_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_BR_Brand_ID__c</fullName>
    <label>Converted BR Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>