force-app/main/default/objects/CallExport2__c/fields/Converted_BR_Prev_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Converted_BR_Prev_Brand_Name__c</fullName>
    <label>Converted BR Prev Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>