force-app/main/default/objects/CallExport2__c/fields/Converted_BR_Type__c.field-meta.xml
<CustomField>
    <fullName>Converted_BR_Type__c</fullName>
    <label>Converted BR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>