force-app/main/default/objects/CallExport2__c/fields/Converted_Brand_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Converted_Brand_Switch_Reason__c</fullName>
    <label>Converted Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>