force-app/main/default/objects/CallExport2__c/fields/Create_Converted_BR__c.field-meta.xml
<CustomField>
    <fullName>Create_Converted_BR__c</fullName>
    <label>Create Converted BR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>