force-app/main/default/objects/CallExport2__c/fields/Create_Medical_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Create_Medical_Diagnosis__c</fullName>
    <label>Create Medical Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>