force-app/main/default/objects/CallExport2__c/fields/Create_New_Address__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Address__c</fullName>
    <label>Create New Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>