force-app/main/default/objects/CallExport2__c/fields/Create_New_Child__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Child__c</fullName>
    <label>Create New Child</label>
    <length>255</length>
    <type>Text</type>
</CustomField>