force-app/main/default/objects/CallExport2__c/fields/Create_Order__c.field-meta.xml
<CustomField>
    <fullName>Create_Order__c</fullName>
    <label>Create Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>