force-app/main/default/objects/CallExport2__c/fields/Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Diagnosis__c</fullName>
    <label>Date of Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>