force-app/main/default/objects/CallExport2__c/fields/Existing_Main_BR_Prev_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Main_BR_Prev_Brand_ID__c</fullName>
    <label>Existing Main BR Prev Brand ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>