force-app/main/default/objects/CallExport2__c/fields/Existing_Main_BR_Prev_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_Main_BR_Prev_Brand_Name__c</fullName>
    <label>Existing Main BR Prev Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>