force-app/main/default/objects/CallExport2__c/fields/Existing_Main_BR_SFID__c.field-meta.xml
<CustomField>
    <fullName>Existing_Main_BR_SFID__c</fullName>
    <label>Existing Main BR SFID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>