force-app/main/default/objects/CallExport2__c/fields/Existing_Main_Brand_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Existing_Main_Brand_Switch_Reason__c</fullName>
    <label>Existing Main Brand Switch Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>