force-app/main/default/objects/CallExport2__c/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>