force-app/main/default/objects/CallExport2__c/fields/IsExported__c.field-meta.xml
<CustomField>
    <fullName>IsExported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExported</label>
    <type>Checkbox</type>
</CustomField>