force-app/main/default/objects/CallExport2__c/fields/Main_Address_District__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_District__c</fullName>
    <label>Main Address District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>