force-app/main/default/objects/CallExport2__c/fields/Main_Address_Street_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Main_Address_Street_Line_1__c</fullName>
    <label>Main Address Street Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>