force-app/main/default/objects/CallExport2__c/fields/Main_Contact_DOB__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_DOB__c</fullName>
    <label>Main Contact DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>