force-app/main/default/objects/CallExport2__c/fields/Main_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Full_Name__c</fullName>
    <label>Main Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>