force-app/main/default/objects/CallExport2__c/fields/Main_Contact_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Home_Phone__c</fullName>
    <label>Main Contact Home Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>