force-app/main/default/objects/CallExport2__c/fields/Main_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_ID__c</fullName>
    <label>Main Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>