force-app/main/default/objects/CallExport2__c/fields/Main_Contact_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Other_Phone__c</fullName>
    <label>Main Contact Other Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>