force-app/main/default/objects/CallExport2__c/fields/MainBrandRelationship__c.field-meta.xml
<CustomField>
    <fullName>MainBrandRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Brand Relationship (DEPRECATED)</label>
    <referenceTo>BrandRelationship__c</referenceTo>
    <relationshipLabel>Call Exports</relationshipLabel>
    <relationshipName>Call_Exports2</relationshipName>
    <type>Lookup</type>
</CustomField>