force-app/main/default/objects/CallExport2__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <formula>Case__r.Market__c</formula>
    <label>Market</label>
    <type>Text</type>
</CustomField>