force-app/main/default/objects/CallExport2__c/fields/Medical_Diagnosis_Name__c.field-meta.xml
<CustomField>
    <fullName>Medical_Diagnosis_Name__c</fullName>
    <label>Medical Diagnosis Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>