force-app/main/default/objects/CallExport2__c/fields/New_Address_City__c.field-meta.xml
<CustomField>
    <fullName>New_Address_City__c</fullName>
    <label>New Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>