force-app/main/default/objects/CallExport2__c/fields/New_Address_District__c.field-meta.xml
<CustomField>
    <fullName>New_Address_District__c</fullName>
    <label>New Address District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>