force-app/main/default/objects/CallExport2__c/fields/New_Adult_BR_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Adult_BR_Brand_ID__c</fullName>
    <label>New Adult BR Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>