force-app/main/default/objects/CallExport2__c/fields/New_Adult_BR_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Adult_BR_Type__c</fullName>
    <label>New Adult BR Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>