force-app/main/default/objects/CallExport2__c/fields/New_Adult_Curr_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Adult_Curr_Brand_ID__c</fullName>
    <label>New Adult Curr Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>