force-app/main/default/objects/CallExport2__c/fields/New_Adult_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Adult_Last_Name__c</fullName>
    <label>New Adult Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>