force-app/main/default/objects/CallExport2__c/fields/New_Adult_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>New_Adult_Mobile_Phone__c</fullName>
    <label>New Adult Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>