force-app/main/default/objects/CallExport2__c/fields/New_Child_BR_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Child_BR_Brand_ID__c</fullName>
    <label>New Child BR Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>