force-app/main/default/objects/CallExport2__c/fields/New_Child_DOB__c.field-meta.xml
<CustomField>
    <fullName>New_Child_DOB__c</fullName>
    <label>New Child DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>