force-app/main/default/objects/CallExport2__c/fields/New_Child_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Child_Full_Name__c</fullName>
    <label>New Child Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>