force-app/main/default/objects/CallExport2__c/fields/New_Child_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Child_Last_Name__c</fullName>
    <label>New Child Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>