force-app/main/default/objects/CallExport2__c/fields/New_Child_Prev_Brand_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Child_Prev_Brand_ID__c</fullName>
    <label>New Child Prev Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>