force-app/main/default/objects/CallExport2__c/fields/Order_Description__c.field-meta.xml
<CustomField>
    <fullName>Order_Description__c</fullName>
    <label>Order Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>