force-app/main/default/objects/CallExport2__c/fields/Order_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Order_Payment_Method__c</fullName>
    <label>Order Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>