force-app/main/default/objects/CallExport2__c/fields/Order_Product_Category_1__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Category_1__c</fullName>
    <label>Order Product Category 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>