force-app/main/default/objects/CallExport2__c/fields/Order_Product_Code_3__c.field-meta.xml
<CustomField>
    <fullName>Order_Product_Code_3__c</fullName>
    <label>Order Product Code 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>