force-app/main/default/objects/CallExport2__c/fields/Order_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Start_Date__c</fullName>
    <label>Order Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>