force-app/main/default/objects/CallExport2__c/fields/Outsource_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Campaign__c</fullName>
    <label>Outsource Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>