force-app/main/default/objects/CallExport2__c/fields/Outsource_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Vendor__c</fullName>
    <label>Outsource Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>