force-app/main/default/objects/CallExport2__c/fields/Outsource_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Outsource_Vendor_Name__c</fullName>
    <label>Outsource Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>