force-app/main/default/objects/CallExport2__c/fields/Successful_Reason__c.field-meta.xml
<CustomField>
    <fullName>Successful_Reason__c</fullName>
    <label>Successful Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>