force-app/main/default/objects/CallExport2__c/fields/To_be_archived__c.field-meta.xml
<CustomField>
    <fullName>To_be_archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To be archived?</label>
    <type>Checkbox</type>
</CustomField>