force-app/main/default/objects/CallExport2__c/fields/Uncontactable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Uncontactable_Reason__c</fullName>
    <label>Uncontactable Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>