force-app/main/default/objects/CallExport2__c/fields/Unsuccessful_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Reason__c</fullName>
    <label>Unsuccessful Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>